<resources>
    <string name="button_Profile">Profile</string>
    <string name="button_Diary">Diary</string>
    <string name="button_Settings">Settings</string>
    <string name="button_Groups">Groups</string>
    <string name="button_Coach">E-Coach</string>
    <string name="button_Activity">Activity</string>
    <string name="button_Vitals">Live Vitals</string>
    <string name="app_name">Vivify</string>
    <string name="button_iets">0</string>
    <string name="button_new_note">Make entry...</string>
    <string name="button_edit_note">Edit today\'s entry...</string>
    <string name="button_save">Save</string>
    <string name="button_cancel">Cancel</string>
    <string-array name="spinner_pushmessage">
        <item>10 sec</item>
        <item>15 sec</item>
        <item>20 sec</item>
        <item>30 sec</item>
        <item>1 min</item>
        <item>2 min</item>
        <item>5 min</item>
        <item>10 min</item>
        <item>15 min</item>
        <item>20 min</item>
        <item>25 min</item>
        <item>30 min</item>
        <item>35 min</item>
        <item>40 min</item>
        <item>45 min</item>
        <item>50 min</item>
        <item>55 min</item>
        <item>60 min</item>
    </string-array>
    <string-array name="spinner_language">
        <item>English</item>
        <item>Nederlands</item>
    </string-array>
    <string name="button_resetacc">Reset Account</string>
    <string name="button_connect">Connect Smartwatch</string>
    <string name="button_disconnect">Disconnect Smartwatch</string>
    <string name="action_settings">Settings</string>
</resources>
