<?xml version="1.0" encoding="UTF-8"?>

    <android.support.constraint.ConstraintLayout tools:context=".MainActivity" android:layout_height="match_parent" android:layout_width="match_parent" xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android">

    <Button
        android:id="@+id/btnProfile"
        android:layout_width="66dp"
        android:layout_height="66dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/freepik"
        android:text="@string/button_Profile"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnDiary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:background="@android:drawable/ic_menu_save"
        android:text="@string/button_Diary"
        android:textAlignment="center"
        android:textSize="0sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/btnSettings"
        app:layout_constraintTop_toBottomOf="@+id/btnProfile" />

    <Button
        android:id="@+id/btnSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:drawable/ic_menu_manage"
        android:text="@string/button_Settings"
        android:textAlignment="center"
        android:textSize="0sp"
        app:layout_constraintLeft_toRightOf="@+id/btnDiary"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnDiary" />

    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/button_Vitals"
        android:background="@android:drawable/ic_menu_view"
        android:layout_marginTop="64dp"
        android:id="@+id/btnLivevitals"
        app:layout_constraintRight_toLeftOf="@+id/btnGroups"
        app:layout_constraintTop_toBottomOf="@+id/btnDiary"
        android:textSize="0sp"/>

    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/btnLivevitals"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/button_Groups"
        android:background="@android:drawable/ic_menu_share"
        android:id="@+id/btnGroups"
        android:textSize="0sp"
        app:layout_constraintLeft_toRightOf="@+id/btnLivevitals"/>

    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/button_Coach"
        android:background="?android:attr/actionModePasteDrawable"
        android:layout_marginTop="64dp"
        android:id="@+id/btnCoach"
        app:layout_constraintRight_toLeftOf="@+id/btnActivity"
        app:layout_constraintTop_toBottomOf="@+id/btnLivevitals"
        android:textSize="0sp"/>

    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/btnCoach"
        app:layout_constraintRight_toRightOf="parent"
        tools:text="@string/button_Activity"
        android:text="@string/button_Activity"
        android:background="@android:drawable/ic_menu_sort_by_size"
        android:layout_marginTop="-148dp"
        android:id="@+id/btnActivity"
        android:textSize="0sp"
        app:layout_constraintLeft_toRightOf="@+id/btnCoach"/>

    <TextView
        android:layout_height="22dp"
        android:layout_width="88dp"
        app:layout_constraintRight_toRightOf="@+id/btnDiary"
        app:layout_constraintLeft_toLeftOf="@+id/btnDiary"
        android:text="Diary"
        android:layout_marginTop="0dp"
        android:id="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/btnDiary"
        android:textAlignment="center"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"/>

    <TextView
        android:layout_height="23dp"
        android:layout_width="97dp"
        app:layout_constraintRight_toRightOf="@+id/btnSettings"
        app:layout_constraintLeft_toLeftOf="@+id/btnSettings"
        android:text="Settings"
        android:id="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/btnSettings"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="83dp"
        android:layout_height="27dp"
        android:layout_gravity="start"
        android:text="Live Vitals"
        android:textAlignment="center"
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="@+id/btnLivevitals"
        app:layout_constraintRight_toRightOf="@+id/btnLivevitals"
        app:layout_constraintTop_toBottomOf="@+id/btnLivevitals" />

    <TextView
        android:layout_height="21dp"
        android:layout_width="47dp"
        app:layout_constraintRight_toRightOf="@+id/btnGroups"
        app:layout_constraintLeft_toLeftOf="@+id/btnGroups"
        android:text="Groups"
        android:id="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/btnGroups"
        android:textAlignment="center"
        app:layout_constraintHorizontal_bias="0.488"/>

    <TextView
        android:layout_height="24dp"
        android:layout_width="55dp"
        app:layout_constraintRight_toRightOf="@+id/btnCoach"
        app:layout_constraintLeft_toLeftOf="@+id/btnCoach"
        android:text="E-Coach"
        android:id="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/btnCoach"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="49dp"
        android:layout_height="23dp"
        android:text="Activity"
        android:textAlignment="center"
        app:layout_constraintLeft_toLeftOf="@+id/btnActivity"
        app:layout_constraintRight_toRightOf="@+id/btnActivity"
        app:layout_constraintTop_toBottomOf="@+id/btnActivity"
        android:layout_marginTop="0dp"
        app:layout_constraintHorizontal_bias="0.512" />

</android.support.constraint.ConstraintLayout>